--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My To-Do List</title>
+</head>
+<body>
+    <h1>Welcome to My To-Do List</h1>
+</body>
+</html>
